<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">V Store </string>
    <string name="field_req">Field required</string>
    <string name="pass_short">Password to short</string>
    <string name="sign_up2">Create Account</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="user_name">User name</string>
    <string name="user_password">password</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Phone</string>
    <string name="register">SignUp</string>
    <string name="si_su">Sign in or create a new account .</string>
    <string name="new_user">Create new Account .</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="do_you_have_a_new_account">Do you have a new account ?</string>
    <string name="create_an_account">Create a new account</string>
    <string name="fullname">Fullname</string>
    <string name="shop_name">Shop Name</string>
    <string name="done">Done</string>
    <string name="shop_type">Type</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="as_buyer">Buyer</string>
    <string name="as_seller">Seller</string>
    <string name="guest">Guest</string>
    <string name="back">Back</string>
    <string name="email_or_phone">Email Or Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="address">Address</string>
    <string name="home">Home</string>
    <string name="following">Following</string>
    <string name="wish">Wish List</string>
    <string name="call_us">Call Us</string>
    <string name="profile">Profile</string>
    <string name="shop_from_the_top_brand">Shop From The Top Brand</string>
    <string name="view_all">View All</string>
    <string name="orders">Orders</string>
    <string name="notifications">Notifications</string>
    <string name="from">From :</string>
    <string name="forgot">Forgot</string>
    <string name="if_you_need_help_resetting_your_password_we_can_help_by_sending_you_alink_to_reset_it">If you need help resetting your password we can help by sending you alink to reset it</string>
    <string name="send">Send</string>
    <string name="wait">Wait...</string>
    <string name="inc_phone_pas">Incorrect phone_email or password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="enter_the_code_to_verfiy_your_code">Enter The Code to Verfiy Your Code</string>
    <string name="we_have_sent_you_an_sms_with_acode_to_the_number">We have sent you an sms with acode to the number</string>
    <string name="qatar">Qatar</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="explore">Explore</string>
    <string name="shops">Shops</string>
    <string name="just_arrivals">Just Arrivals</string>
    <string name="catogry">Catogry</string>
    <string name="men">Men</string>
    <string name="Women">Women</string>
    <string name="inv_email">Invalid email</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="suc">Success !</string>
    <string name="my_address">My Address</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="ch_city">Choose City</string>
    <string name="product_detials">Product Detials</string>
    <string name="colors">Colors</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="you_also_like_this">You Also Like This</string>
    <string name="news">New</string>
    <string name="trending">Trending</string>
    <string name="share">share</string>
    <string name="likes">Likes</string>
    <string name="followers">Followers</string>
    <string name="rating">Rating</string>
    <string name="total">Total</string>
    <string name="no_products_to_display">No Products To Display</string>
    <string name="products">Products</string>
    <string name="color1">Color</string>
    <string name="size1">Size</string>
    <string name="complete">Complete</string>
    <string name="cart">Cart</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="contact_us">Contact Us</string>
    <string name="more">More</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="choose_color">Choose Color</string>
    <string name="choose_size">Choose Size</string>
    <string name="Chat">Connect US</string>
    <string name="type_a_message">type a message....</string>
    <string name="my_information">My InFormation</string>
    <string name="mypage">My Page</string>
    <string name="add_product">Add Product</string>
    <string name="no_shop_found">No Shop Found</string>
    <string name="date">Data :</string>
    <string name="my_orders">My Orders</string>
    <string name="no_order_to_display">No Order to Display</string>
    <string name="no_notification_found">No Notification Found</string>
    <string name="detials">Detials</string>
    <string name="shop">Shop</string>
    <string name="review">Review</string>
    <string name="comment">Comment</string>
    <string name="check_out">Check Out</string>
    <string name="congrats">Congrats</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="gender">Gender</string>
    <string name="select_product_images">Select Product Images</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="select_a_picture_to_upload">select a picture to upload</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="upload_image">upload image</string>
    <string name="language_setting">Language Setting</string>
    <string name="your_order_is_complete">Your Order is Complete</string>
    <string name="editpr">Edit Profile</string>
    <string name="like">Like</string>
    <string name="you_rate_this_user_before">You Rate This Before</string>
    <string name="un_follow">Un Follow</string>
    <string name="empty">Empty</string>
    <string name="reset_password">Reset Password</string>
</resources>
