<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <data>
        <variable
            name="lang"
            type="String" />
        <variable
            name="contactUs"
            type="com.elkhelj.ecommerece.models.ContactUsModel" />

        <variable
            name="contactListener"
            type="com.elkhelj.ecommerece.interfaces.Listeners.ContactListener" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/white"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/user_name"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edt_bg"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@={contactUs.name}"
                error="@{contactUs.error_name}"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/email"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edt_bg"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@={contactUs.email}"
                error="@{contactUs.error_email}"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/subject"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edt_bg"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@={contactUs.subject}"
                error="@{contactUs.error_subject}"

                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:text="@string/message"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edt_bg"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:padding="8dp"
                android:gravity="top"
                android:text="@={contactUs.message}"
                error="@{contactUs.error_message}"

                />
            <Button
                android:id="@+id/btnSend"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_trans"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:text="@string/send"
                android:onClick="@{()->contactListener.sendContact(contactUs)}"
                />
        </LinearLayout>

</androidx.core.widget.NestedScrollView>
</layout>
