<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="backListener"
            type="com.elkhelj.ecommerece.interfaces.Listeners.BackListener" />

        <variable
            name="lang"
            type="String" />

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray0"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:onClick="@{()->backListener.back()}"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="8dp"
                    android:rotation='@{lang.equals("en")?180:0}'
                    android:src="@drawable/ic_arrow_right"
                    android:tint="@color/colorPrimary" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:clickable="false"
                    android:longClickable="false"
                    android:text="@string/back"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp" />
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/llContainer"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/btnDone"

                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/price"
                        android:textSize="17sp"
                        />
                    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                        android:id="@+id/rangeSeekbar3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:corner_radius="10"
                        app:min_value="50"
                        app:max_value="10000"
                        app:gap="20"
                        app:bar_color="#8990C4"
                        app:bar_highlight_color="#2434AD"
                        app:left_thumb_color="#1A246D"
                        app:right_thumb_color="#1A246D"
                        app:left_thumb_color_pressed="#030B47"
                        app:right_thumb_color_pressed="#030B47"
                        app:data_type="_integer"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="@string/size1"
                        android:textSize="17sp"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recmay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorPrimary"
                        android:text="Brand "
                        android:textSize="17sp"
                        />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recbrand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

                <Button
                    android:id="@+id/btnDone"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/done"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>
</layout>
