<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="lang"
            type="String" />



    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            android:scrollbars="none"
            android:background="@color/white"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/enter_the_code_to_verfiy_your_code"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    />

                <TextView
                    android:id="@+id/sms"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/we_have_sent_you_an_sms_with_acode_to_the_number"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/forgot" />
                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/sms"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias=".2"
android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"

                    >

                    <com.jkb.vcedittext.VerificationCodeEditText
                        android:id="@+id/edt_ver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp"
                        app:bottomLineHeight="2dp"
                        app:bottomLineNormalColor="@color/colorAccent"
                        app:bottomLineSelectedColor="@color/colorAccent"
                        app:figures="6"
                        app:selectedBackgroundColor="@color/white"
                        app:verCodeMargin="10dp"
                        android:layout_marginTop="15dp"

                        />



                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:background="@drawable/btn_login_bg"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/send"
                    app:layout_constraintVertical_bias="0"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>